--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,3 +39,23 @@
 .bg-red-600 {
   background-color: rgba(220, 38, 38) !important;
 }
+
+.border-focus:focus {
+  border-color: rgb(120, 120, 120) !important;
+}
+.border-focus-green:focus {
+  border-color: rgb(6, 132, 61) !important;
+}
+
+.border-focus,
+.border-focus-green {
+  box-sizing: border-box;
+  /* border: 3px solid #ccc; */
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  outline: none;
+}
+.object-change-transition {
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
